--- a/app.json
+++ b/app.json
@@ -36,6 +36,21 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "a9ac1b62-d456-4885-b070-1f0d510afa03"
+      }
+    },
+    "owner": "godfirst",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/a9ac1b62-d456-4885-b070-1f0d510afa03"
     }
   }
 }
